--- a/pom.xml
+++ b/pom.xml
@@ -50,25 +50,25 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
-        <io.swagger.version>1.5.22</io.swagger.version>
-        <junit.version>4.12</junit.version>
-        <org.mockito.version>2.11.0</org.mockito.version>
-        <org.slf4j.version>1.7.25</org.slf4j.version>
-        <io.openapitools.jackson.dataformat.jackson-dataformat-hal.version>1.0.4
-        </io.openapitools.jackson.dataformat.jackson-dataformat-hal.version>
-        <javax.xml.bin.jaxb-api.version>2.3.0</javax.xml.bin.jaxb-api.version>
+        <io.swagger.version>2.1.4</io.swagger.version>
+        <junit.version>5.7.0</junit.version>
+        <junit.platform.version>1.7.0</junit.platform.version>
+        <org.mockito.version>3.5.11</org.mockito.version>
+        <org.slf4j.version>1.7.30</org.slf4j.version>
+        <jackson-dataformat-hal.version>1.0.7</jackson-dataformat-hal.version>
+        <jakarta.xml.bind>2.3.3</jakarta.xml.bind>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-jaxrs</artifactId>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2</artifactId>
             <version>${io.swagger.version}</version>
         </dependency>   
         <dependency>
             <groupId>io.openapitools.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-hal</artifactId>
-            <version>${io.openapitools.jackson.dataformat.jackson-dataformat-hal.version}</version>
+            <version>${jackson-dataformat-hal.version}</version>
         </dependency>     
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -76,16 +76,28 @@
             <version>${org.slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${javax.xml.bin.jaxb-api.version}</version>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind}</version>
             <optional>true</optional>
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+  			<artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+  			<artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+  			<artifactId>junit-platform-launcher</artifactId>
+            <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
