Update ModelConverter to work with Swagger 2.x (OpenAPI 3.x)

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
+        <jakarta.ws.rs>2.1.6</jakarta.ws.rs>
         <io.swagger.version>2.1.4</io.swagger.version>
         <junit.version>5.7.0</junit.version>
         <junit.platform.version>1.7.0</junit.platform.version>
@@ -60,11 +61,21 @@
     </properties>
 
     <dependencies>
+    	<dependency>
+            <groupId>jakarta.ws.rs</groupId>
+			<artifactId>jakarta.ws.rs-api</artifactId>
+			<version>${jakarta.ws.rs}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>${io.swagger.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-jaxrs2</artifactId>
             <version>${io.swagger.version}</version>
-        </dependency>   
+        </dependency>
         <dependency>
             <groupId>io.openapitools.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-hal</artifactId>
