--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <name>Swagger HAL module</name>
     <groupId>io.openapitools.hal</groupId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.5</version>
     <artifactId>swagger-hal</artifactId>
     <packaging>jar</packaging>
 
@@ -37,7 +35,7 @@
         <developerConnection>scm:git:https://github.com/openapi-tools/swagger-hal.git
         </developerConnection>
         <url>https://github.com/openapi-tools/swagger-hal/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>v1.0.5</tag>
     </scm>
 
     <distributionManagement>
