--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <name>Swagger HAL module</name>
     <groupId>io.openapitools.hal</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <artifactId>swagger-hal</artifactId>
     <packaging>jar</packaging>
 
@@ -35,7 +35,7 @@
         <developerConnection>scm:git:https://github.com/openapi-tools/swagger-hal.git
         </developerConnection>
         <url>https://github.com/openapi-tools/swagger-hal/tree/master</url>
-        <tag>v2.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
